--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
     "react": "^16.13.1",
