Set up jest & fixed some code according to linter

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "build": "webpack -d --watch",
-    "seed": "node ./database/seed.js"
+    "seed": "node ./database/seed.js",
+    "test": "jest",
+    "test:coverage": "jest --verbose --coverage"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
@@ -18,7 +20,8 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -30,6 +33,9 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
