--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "babel-preset-airbnb": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jquery": "^3.5.0",
