--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^3.5.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
@@ -47,6 +48,7 @@
     "faker": "^4.1.0",
     "jest": "^26.0.1",
     "puppeteer": "^3.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
