--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "webpack -d --watch",
+    "build:prod": "webpack --config production.config.js",
     "seed": "node ./database/seed.js",
     "test": "jest",
     "test:coverage": "jest --verbose --coverage"
